--- a/assets/style.css
+++ b/assets/style.css
@@ -93,7 +93,7 @@ header nav ul li a:hover {
 }
 
 .container {
-  border-bottom: 1px solid gray;
+  /* border-bottom: 1px solid gray; */
   margin-bottom: 2px;
   padding-bottom: 10px;
 }
@@ -117,11 +117,11 @@ header nav ul li a:hover {
 
 .example-container {
   display: flex;
-  padding: 10px;
+  /* padding: 10px; */
   justify-content: space-between;
   align-items: center;
-  border-top: 10px solid  #493a5a;
-  border-bottom: 10px solid #493a5a ;
+  border-top: 10px solid #493a5a;
+  border-bottom: 10px solid #493a5a;
   /* border: 2px solid rgb(0, 255, 136); */
 }
 
@@ -136,31 +136,46 @@ header nav ul li a:hover {
 
 .work-container {
   display: flex;
-  /* flex-wrap: wrap; */
-  justify-content: flex-end;
+  flex-wrap: wrap;
+  justify-content: space-around;
   border-radius: 14px;
 }
 
 .work-link1 {
-  /* width: 45%; */
+  height: 300px;
+  width: 300px;
+  background-image: url(./Screenshot\ \(11\).png);
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row-reverse;
-  justify-content: flex-end;
+  justify-content:space-around;
   /* border: 2px solid orange; */
   border-radius: 14px;
   padding: 10px;
-  /* flex-basis: 30%; */
+  flex-basis: 50%;
 }
 
-.work-link1 span {
+.work-link2, .work-link3, .work-link4, .work-link5 {
+  height: 200px;
+  width: 200px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  flex-basis: 25;
+  background-image: url(./worklinkimage4.png);
+  /* border: 2px solid greenyellow; */
+  border-radius: 14px;
+}
+
+
+div.work-container span {
   display: flex;
   flex-direction: column;
   margin-top: auto;
-  width: 25%;
+  width: 50%;
   border-radius: 14px;
-  background-color:rgba(128, 128, 128, 75%);
-  color:#493a5a;
+  background-color: rgba(128, 128, 128, 75%);
+  color:antiquewhite;
   padding: 10px 5px;
   text-align: center;
 }
@@ -172,7 +187,7 @@ header nav ul li a:hover {
 .contact-card {
   display: flex;
   padding: 10px;
-  margin: 40px 0 40px 0;
+  margin: 50px 0 50px 0;
   justify-content: space-between;
   align-items: center;
 }
@@ -185,11 +200,6 @@ header nav ul li a:hover {
   border-radius: 14px;
   border-right: 2px solid #493a5a;
   padding: 10px;
-}
-
-.contact-label .cm-buttons a {
-  text-decoration: none;
-  color: #493a5a;
 }
 
 .cm-buttons nav {
@@ -237,6 +247,5 @@ footer h2 {
   font-size: 30px;
   margin: 0;
 }
-
 
 /*end footer*/
