added project2 to example 5

--- a/assets/style.css
+++ b/assets/style.css
@@ -199,7 +199,7 @@ border-radius: 14px;
   flex-wrap: wrap;
   justify-content: space-around;
   flex-basis: 24%;
-  background-image: url(./worklinkimage4.png);
+  background-image: url(./Project2Screenshot.png);
   border: 2px solid antiquewhite;
   border-radius: 14px;
 }
